assets/style.css
body {
    background: url("PrisonParallax.png") bottom left no-repeat fixed #e14b00;
    background-repeat: repeat-x;

    color: white;

    font-family: 'Play', sans-serif;

    text-shadow: 0px 1px black;

    word-break: break-word;
}

.background-box {
	background-color: rgba(62, 62, 62, 0.64);
    
    border-width: 2px;
    border-style: solid;
    border-color: rgba(76, 76, 76, 0.4);
    background-clip: padding-box;
}

.logo {
    max-width: 90vw;
    height: auto;
    image-rendering: crisp-edges !important;
}

ul {
    list-style: square inside;
    margin-left: 0px;
    padding-left: 0px;
}

img {
	/* Copied from .img-fluid */
	max-width: 100%;
	height: auto;
    display: block;
}

a {
    color: #72b400;
    text-shadow: 0px 1px #1c2a00;
}

a:hover {
    color: #72b400;
    text-shadow: 0px 1px #1c2a00;
}

h2 {
    color: #72b400;
    text-shadow: 0px 1px #1c2a00;
    font-weight: bold;
}

.white {
    color: white;
    text-shadow: 0px 1px rgba(40, 40, 40, 1.0);
}

.text-muted {
    color: #a1acb5 !important;
    text-shadow: 0px 1px #323232;
}

.btn-primary {
    border-radius: 0px;
    transition: none;
    box-shadow: none !important;
}

.btn-primary:hover {
    color: #72b400;
    text-shadow: 0px 1px #1c2a00;
    background-color: rgba(68, 68, 68, 0.64);
    border-color: rgba(82, 82, 82, 0.4);
}

.btn:active {
    color: #72b400 !important;
    text-shadow: 0px 1px #1c2a00  !important;
    background-color: rgba(68, 68, 68, 0.64) !important;
    border-color: rgba(82, 82, 82, 0.4) !important;
}

code {
    color: #2fdda5;
}

.page-nav {
    overflow: auto;
}

